--- a/client2/src/index.css
+++ b/client2/src/index.css
@@ -28,6 +28,10 @@ body {
 
 footer {
   color: hsla(0, 1%, 38%, 0.612);
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  left: 30%;
 
 }
 
