--- a/client2/src/index.css
+++ b/client2/src/index.css
@@ -30,7 +30,7 @@ footer {
   color: hsla(0, 1%, 38%, 0.612);
   position: absolute;
   text-align: center;
-  bottom: 0;
+  bottom: 10px;
   left: 30%;
 
 }
